added animations to sections

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- Ion Icons -->
     <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+    <!-- Animation -->
+    <link href="vendors/css/animate.css" rel="stylesheet" type="text/css">
 
     <title>Dine-In-Dash | Healthy Does Not Mean Boring</title>
   </head>
@@ -62,7 +64,7 @@
       Features
     ------------------->
     <section class="section-features js--section-features" id="features">
-      <div class="row">       
+      <div>       
         <!-- Features Header -->
         <h1 class="features-header">Get food fast &mdash; not fast food.</h1>
         <p class="long-copy">
@@ -71,7 +73,7 @@
         </p>
       </div>
         <!-- Features Detail -->
-      <div class="row">
+      <div class="row js--wp-1">
         <div class="col span-1-of-4 box">  
           <ion-icon name="infinite-outline" class="icon-big"></ion-icon>       
           <h2 class="features-detail">Up to 365 days/year</h2>
@@ -193,7 +195,7 @@
           <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Google Play Store Button"></a>
         </div>
         <div class="col span-1-of-4">
-          <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen">
+          <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen js--wp-2">
         </div> 
       </div>
     </section>
@@ -207,7 +209,7 @@
           <h1 class="section-cities-header">We're currently in these cities</h1>
         </div>     
       <!-- Cities Detail -->
-      <div class="row">
+      <div class="row js--wp-3">
          <!-- Lisbon -->
         <div class="col span-1-of-4 box">
           <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
