Added SEO in head

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width"> 
+    <meta name="description" content="Dine-In-Dash is a premium healthy food delivery system wiht the mission to bring afffordable and healthy meals to as mnay people as possible">
     <!-- CSS Compatible with Different Browsers -->
     <link href="vendors/css/normalize.css" rel="stylesheet" type="text/css">
     <!-- CSS Grid -->
@@ -22,6 +23,8 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"> 
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="/resources/img/favicon.ico">
 
     <title>Dine-In-Dash | Healthy Does Not Mean Boring</title>
   </head>
