--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="en">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width"> 
     <meta name="description" content="Dine-In-Dash is a premium healthy food delivery system wiht the mission to bring afffordable and healthy meals to as mnay people as possible">
@@ -30,14 +30,14 @@
   </head>
   
   <body>
-    <!------------------
+    <!-----------------
       Intro
-    ------------------->
+    ------------------>
     <div class="backgroundImage">
 
-      <!------------------
+      <!-----------------
         Header
-      ------------------->
+      ------------------>
       <header id="home">
         <nav>
           <div class="row">
@@ -52,10 +52,12 @@
             <div class="dropdown">
               <a class="mobile-nav-icon dropbtn"><ion-icon name="menu-outline"></ion-icon></a>
               <div id="myDropdown" class="dropdown-content">
-                <li><a href="#features">Food delivery</a></li>
-                <li><a href="#works">How it works</a></li>
-                <li><a href="#cities">Our cities</a></li>
-                <li><a href="#plans">Sign up</a></li>
+                <ul>
+                  <li><a href="#features">Food delivery</a></li>
+                  <li><a href="#works">How it works</a></li>
+                  <li><a href="#cities">Our cities</a></li>
+                  <li><a href="#plans">Sign up</a></li>
+                </ul>
               </div>
             </div>
             <!-- <a class="mobile-nav-icon dropbtn"><ion-icon name="menu-outline"></ion-icon></a> -->
@@ -70,9 +72,9 @@
       </header>
     </div>
 
-    <!------------------
+    <!-----------------
       Features
-    ------------------->
+    ------------------>
     <section class="section-features js--section-features" id="features">
       <div>       
         <!-- Features Header -->
@@ -103,7 +105,7 @@
           <h3 class="features-detail">100% organic</h3>
           <p class="features-paragraph">
             All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
-          </p class="features-paragraph">
+          </p>
         </div>       
         <div class="col span-1-of-4 box">
           <ion-icon name="cart-outline" class="icon-big"></ion-icon>
@@ -115,72 +117,74 @@
       </div>
     </section>
 
-    <!------------------
+    <!-----------------
       Favorite Meals
-    ------------------->
+    ------------------>
     <section class="section-meals">
-      <ul class="meals-showcase">
-        <li>
-          <figure class="meal-photo">
-            <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
-          </figure>
-        </li>
-      </ul>
-      <ul class="meals-showcase">
-        <li>
-          <figure class="meal-photo">
-            <img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
-          </figure>
-        </li>
-      </ul>
-      <ul class="meals-showcase">
-        <li>
-          <figure class="meal-photo">
-            <img src="resources/img/3.jpg" alt="Chicken breast steak with vegetables">
-          </figure>
-        </li>
-      </ul>
-      <ul class="meals-showcase">
-        <li>
-          <figure class="meal-photo">
-            <img src="resources/img/4.jpg" alt="Autumn pumpkin soup">
-          </figure>
-        </li>
-      </ul>
-      <ul class="meals-showcase">
-        <li>
-          <figure class="meal-photo">
-            <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
-          </figure>
-        </li>
-      </ul>
-      <ul class="meals-showcase">
-        <li>
-          <figure class="meal-photo">
-            <img src="resources/img/6.jpg" alt="Healthy baguette with egg and vegetables">
-          </figure>
-        </li>
-      </ul>
-      <ul class="meals-showcase">
-        <li>
-          <figure class="meal-photo">
-            <img src="resources/img/7.jpg" alt="Burger with cheddar and bacon">
-          </figure>
-        </li>
-      </ul>
-      <ul class="meals-showcase">
-        <li>
-          <figure class="meal-photo">
-            <img src="resources/img/8.jpg" alt="Granola with cherries and strawberries">
-          </figure>
-        </li>
-      </ul>
-      <ul class="clearfix"></ul>
+      <div>
+        <ul class="meals-showcase">
+          <li>
+            <figure class="meal-photo">
+              <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+            </figure>
+          </li>
+        </ul>
+        <ul class="meals-showcase">
+          <li>
+            <figure class="meal-photo">
+              <img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+            </figure>
+          </li>
+        </ul>
+        <ul class="meals-showcase">
+          <li>
+            <figure class="meal-photo">
+              <img src="resources/img/3.jpg" alt="Chicken breast steak with vegetables">
+            </figure>
+          </li>
+        </ul>
+        <ul class="meals-showcase">
+          <li>
+            <figure class="meal-photo">
+              <img src="resources/img/4.jpg" alt="Autumn pumpkin soup">
+            </figure>
+          </li>
+        </ul>
+        <ul class="meals-showcase">
+          <li>
+            <figure class="meal-photo">
+              <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
+            </figure>
+          </li>
+        </ul>
+        <ul class="meals-showcase">
+          <li>
+            <figure class="meal-photo">
+              <img src="resources/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+            </figure>
+          </li>
+        </ul>
+        <ul class="meals-showcase">
+          <li>
+            <figure class="meal-photo">
+              <img src="resources/img/7.jpg" alt="Burger with cheddar and bacon">
+            </figure>
+          </li>
+        </ul>
+        <ul class="meals-showcase">
+          <li>
+            <figure class="meal-photo">
+              <img src="resources/img/8.jpg" alt="Granola with cherries and strawberries">
+            </figure>
+          </li>
+        </ul>
+        <ul class="clearfix"></ul>
+      </div>
     </section>
 
-    <!------------------
+    <!-----------------
       How It Works
-    ------------------->
+    ------------------>
     <section class="section-steps" id="works">
       <!-- How It Works Header -->
       <div class="row">
@@ -210,9 +214,9 @@
       </div>
     </section>
 
-    <!------------------
+    <!-----------------
       Cities
-    ------------------->
+    ------------------>
     <section class="setion-cities" id="cities">
       <!-- Cities Header -->
       <div class="row">
@@ -291,9 +295,9 @@
       </div>
     </section>
     
-    <!------------------
+    <!-----------------
       Customer Testimonials 
-    ------------------->
+    ------------------>
     <section class="section-testimonials">
       <!-- Customer Testimonials Header -->
       <div class="row">
@@ -304,27 +308,27 @@
         <div class="col span-1-of-3">
             <blockquote>
                 Dine-In-Dash is just awesome! I just launched a startup which leaves me with no time for cooking, so Dine-In-Dash is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
-                <cite><img src="resources/img/customer-1.jpg">Alberto Duncan</cite>
+                <cite><img src="resources/img/customer-1.jpg" alt="Customer-1">Alberto Duncan</cite>
             </blockquote>
         </div>
         <div class="col span-1-of-3">
             <blockquote>
                 Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Dine-In-Dash. Me and my family are so in love!
-                <cite><img src="resources/img/customer-2.jpg">Joana Silva</cite>
+                <cite><img src="resources/img/customer-2.jpg" alt="Customer-2">Joana Silva</cite>
             </blockquote>
         </div>
         <div class="col span-1-of-3">
             <blockquote>
               I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Dine-In-Dash. Best food delivery service in the Bay Area. Keep up the great work!
-            <cite><img src="resources/img/customer-3.jpg">Milton Chapman</cite>
+            <cite><img src="resources/img/customer-3.jpg" alt="Customer-3">Milton Chapman</cite>
             </blockquote>
         </div>
       </div>
     </section>
 
-    <!------------------
+    <!-----------------
       Signup and Plans 
-    ------------------->
+    ------------------>
     <section class="section-plans js--section-plans" id="plans">
       <!-- Signup and Plans Header -->
       <div class="row">
@@ -365,8 +369,8 @@
                   <ul>
                       <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal 10 days/month</li>
                       <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7</li>
-                      <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon></i>Access to newest creations</li>
-                      <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon></i>Free delivery</li>
+                      <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations</li>
+                      <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
                   </ul>
               </div>
               <div>
@@ -398,10 +402,10 @@
       </div>
         </section>
 
-    <!------------------
+    <!-----------------
       Contact Form 
-    ------------------->
-    <section class="section-form" id="plans">
+    ------------------>
+    <section class="section-form" id="form">
       <!-- Contact Form Header -->
       <div class="row">
         <h1 class="form-header">We're happy to hear from you</h1>
@@ -472,9 +476,9 @@
       </div>
     </section>
 
-    <!------------------
+    <!-----------------
       Footer
-    ------------------->
+    ------------------>
     <footer>
       <div class="row">
         <!-- Footer Navigation -->
