--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   </head>
   
   <body>
-    <!-----------------
+    <!--
       Intro
-    ------------------>
+    -->
     <div class="backgroundImage">
 
-      <!-----------------
+      <!--
         Header
-      ------------------>
+      -->
       <header id="home">
         <nav>
           <div class="row">
@@ -73,9 +73,9 @@
       </header>
     </div>
 
-    <!-----------------
+    <!--
       Features
-    ------------------>
+    -->
     <section class="section-features js--section-features" id="features">
       <div>       
         <!-- Features Header -->
@@ -118,9 +118,9 @@
       </div>
     </section>
 
-    <!-----------------
+    <!--
       Favorite Meals
-    ------------------>
+    -->
     <section class="section-meals">
       <div>
         <ul class="meals-showcase">
@@ -183,9 +183,9 @@
       </div>
     </section>
 
-    <!-----------------
+    <!--
       How It Works
-    ------------------>
+    -->
     <section class="section-steps" id="works">
       <!-- How It Works Header -->
       <div class="row">
@@ -215,9 +215,9 @@
       </div>
     </section>
 
-    <!-----------------
+    <!--
       Cities
-    ------------------>
+    -->
     <section class="setion-cities" id="cities">
       <!-- Cities Header -->
       <div class="row">
@@ -296,9 +296,9 @@
       </div>
     </section>
     
-    <!-----------------
+    <!--
       Customer Testimonials 
-    ------------------>
+    -->
     <section class="section-testimonials">
       <!-- Customer Testimonials Header -->
       <div class="row">
@@ -327,9 +327,9 @@
       </div>
     </section>
 
-    <!-----------------
+    <!--
       Signup and Plans 
-    ------------------>
+    -->
     <section class="section-plans js--section-plans" id="plans">
       <!-- Signup and Plans Header -->
       <div class="row">
@@ -392,7 +392,7 @@
                       <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal</li>
                       <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order from 8 am to 12 pm</li>
                       <li><ion-icon name="close-outline" class="icon-red"></ion-icon>Access to newest creations</li>
-                      <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon></i>Free delivery</li>
+                      <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
                   </ul>
               </div>
               <div>
@@ -403,9 +403,9 @@
       </div>
         </section>
 
-    <!-----------------
+    <!--
       Contact Form 
-    ------------------>
+    -->
     <div class="map-box">
       <!-- Map -->
       <div id="map" class="map"></div>
@@ -416,7 +416,7 @@
         </div>        
         <!-- Contact Form Detail -->
         <div class="row">          
-          <form action="#" method="post" class="contact-form" action="mailer.php"> 
+          <form method="post" class="contact-form" action="mailer.php"> 
             <!-- Name -->
             <div class="row">
               <div class="col span-1-of-3">
@@ -481,9 +481,9 @@
       </div>
     </div>
 
-    <!-----------------
+    <!--
       Footer
-    ------------------>
+    -->
     <footer>
       <div class="row">
         <!-- Footer Navigation -->
