changed link for favicon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"> 
     <!-- Favicon-->
-    <link rel="shortcut icon" href="/resources/img/favicon.ico">
+    <link rel="shortcut icon" href="resources/img/favicon.ico">
     
 
     <title>Dine-In-Dash | Healthy Does Not Mean Boring</title>
